# stoatchat

crates/core/config/: Revolt.toml
crates/core/config/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/src/: lib.rs
crates/core/database/src/drivers/: reference.rs
crates/core/database/src/tasks/: ack.rs
crates/core/database/src/util/: mod.rs
crates/core/database/src/voice/: mod.rs
crates/core/models/src/: lib.rs
crates/core/models/src/v0/: channels.rs  config.rs  messages.rs  server_members.rs  users.rs
crates/core/permissions/src/models/: channel.rs  server.rs
crates/core/ratelimits/: Cargo.toml
crates/core/ratelimits/src/: rocket.rs
crates/core/result/: Cargo.toml
crates/core/result/src/: lib.rs
crates/daemons/voice-ingress/: Cargo.toml
crates/delta/: Cargo.toml
crates/delta/src/: main.rs
crates/delta/src/routes/: root.rs
crates/delta/src/routes/bots/: delete.rs
crates/delta/src/routes/channels/: channel_delete.rs  channel_edit.rs  group_remove_member.rs  message_bulk_delete.rs  message_query.rs  message_search.rs  message_send.rs  mod.rs  permissions_set.rs  permissions_set_default.rs  voice_join.rs  voice_stop_ring.rs
crates/delta/src/routes/invites/: invite_fetch.rs
crates/delta/src/routes/policy/: acknowledge_policy_changes.rs
crates/delta/src/routes/safety/: report_content.rs
crates/delta/src/routes/servers/: ban_create.rs  member_edit.rs  member_remove.rs  permissions_set.rs  permissions_set_default.rs  roles_delete.rs  roles_edit.rs  roles_edit_positions.rs  (+1 more)
crates/services/autumn/src/: main.rs
(+6 files in other folders)
