[package]
name = "revolt-result"
version = "0.8.9"
edition = "2021"
license = "MIT"
authors = ["Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: Result and Error types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
utoipa = ["dep:utoipa"]
rocket = ["dep:rocket", "dep:serde_json"]
axum = ["dep:axum", "dep:serde_json"]
sentry = ["dep:sentry"]

default = ["serde", "sentry"]

[dependencies]
# Serialisation
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

# Spec Generation
utoipa = { version = "5.4.0", optional = true }

# Rocket
rocket = { optional = true, version = "0.5.0-rc.2", default-features = false }

# utilities
log = "0.4"
# Axum
axum = { version = "0.8.6", optional = true }

sentry = { version = "0.31.5", optional = true }
